--- a/templates/index.html
+++ b/templates/index.html
@@ -33,20 +33,29 @@
                 <label>Current occupation:</label>
                 <br>
                 <div class="btn-group-vertical" id="occupation">
-                    <input class="btn-check form-control" type="radio" name="occupation" id="employed" required>
+                    <input class="btn-check form-control" type="radio" name="occupation" value="employed" id="employed" required>
                     <label class="btn btn-outline-secondary" for="employed">Employed</label>
 
-                    <input class="btn-check form-control" type="radio" name="occupation" id="unemployed" required>
+                    <input class="btn-check form-control" type="radio" name="occupation" value="unemployed" id="unemployed" required>
                     <label class="btn btn-outline-secondary" for="unemployed">Unemployed</label>
 
-                    <input class="btn-check form-control" type="radio" name="occupation" id="self-employed" required>
+                    <input class="btn-check form-control" type="radio" name="occupation" value="self-employed" id="self-employed" required>
                     <label class="btn btn-outline-secondary" for="self-employed">Self-Employed</label>
 
-                    <input class="btn-check form-control" type="radio" name="occupation" id="student" required>
+                    <input class="btn-check form-control" type="radio" name="occupation" value="student" id="student" required>
                     <label class="btn btn-outline-secondary" for="student">Student</label>
                 </div>
             </div>
             <button class="btn btn-secondary mb-4" type="submit">Submit</button>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <div class="alert alert-success">
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </div>
+            {% endif %}
+            {% endwith %}
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
